--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "compression": "^1.7.1",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.9.0",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-flash-2": "^1.0.1",
+    "express-minify": "^1.0.0",
     "morgan": "~1.9.0",
     "nodemailer": "^4.4.2",
     "nodemailer-smtp-transport": "^2.7.4",
